--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,11 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5">Hello Yadisa!</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <p class="alert alert-warning mt-4"></p>
+      <span id="excuse">My dog ate my homework</span>
+
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
